ninewinecfg: Add new programm to configure d3d9-nine.dll
Signed-off-by: Patrick Rudolph <siro@das-labor.org>

--- a/configure.ac
+++ b/configure.ac
@@ -4004,6 +4004,7 @@ WINE_CONFIG_PROGRAM(wevtutil,,[install])
 WINE_CONFIG_PROGRAM(wineboot,,[clean,install,installbin,manpage])
 WINE_CONFIG_PROGRAM(winebrowser,,[install])
 WINE_CONFIG_PROGRAM(winecfg,,[clean,install,installbin,manpage])
+WINE_CONFIG_PROGRAM(ninewinecfg,,[clean,install,installbin])
 WINE_CONFIG_PROGRAM(wineconsole,,[clean,install,installbin,manpage])
 WINE_CONFIG_PROGRAM(winedbg,,[clean,install,installbin,manpage])
 WINE_CONFIG_PROGRAM(winedevice,,[install])
