ninewinecfg: Add support for wine Use dladdr to find library address to create symlink to.
Signed-off-by: Patrick Rudolph <siro@das-labor.org>

--- a/programs/ninewinecfg/Makefile.in
+++ b/programs/ninewinecfg/Makefile.in
@@ -1,6 +1,7 @@
 MODULE    = ninewinecfg.exe
 APPMODE   = -mwindows
 IMPORTS   = shell32 gdi32 advapi32 user32 comctl32 ole32
+EXTRALIBS = -ldl
 
 C_SRCS = main.c
 
