--- a/include/config.h.in
+++ b/include/config.h.in
@@ -1365,6 +1365,9 @@
 /* Define to 1 if you have the `__res_get_state' function. */
 #undef HAVE___RES_GET_STATE
 
+/* ninewinecfg extra libs */
+#undef NINEWINECFG_LIBS
+
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
